Add digital ID card using semantic HTML

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>ID Card</title>
+    <meta charset="UTF-8" />
+    <title>Digital ID Card</title>
   </head>
   <body>
     <header>
-      <h1>Judy Tantoy</h1>
+      <h1>Judy S. Tantoy</h1>
     </header>
 
     <main>
       <p>Course: BSIT</p>
-      <p>Dream Job: Web Designer</p>
+      <p>Dream Job: To become a Web Designer</p>
     </main>
 
     <footer>
-      <a href="https://www.facebook.com/judih.tantoy">My Facebook</a>
+      <a href="https://github.com/USERNAME-MO" target="_blank">
+        Judy Sereña Tantoy
+      </a>
     </footer>
   </body>
 </html>
