--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </main>
 
     <footer>
-      <a href="https://github.com/USERNAME-MO" target="_blank">
+      <a href="https://github.com/jtantoy79@asscat.edu.ph" target="_blank">
         Judy Sereña Tantoy
       </a>
     </footer>
